# symbolic-sequence-processing

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  ballplot.cpp  ballplot.h  bsplines.cpp  bsplines.h  build_gcc_gmake.bat  c1.cpp  c4.cpp  c4.h  c6.cpp  c6.h  dft.cpp  dft.h  die.cpp  die.h  dna.cpp  dna.h  dnan.cpp  dnan.h  doxy.bat  elliptic.cpp  elliptic.h  euclid.cpp  euclid.h  fairdie.cpp  fairdie.h  fileplot.cpp  fileplot.h  lab2015larc.cpp  lab2015larc.h  lab2015ssp.cpp  lab2015ssp.h  larc.cpp  larc.h  larc_ball.xlg  larc_ball_1_1.xlg  (+35 more)
data/: lab_larc_distances_R2.xlg  lab_larc_distances_R3.xlg  larc_ball(05_05).xlg  larc_ball(0_0).xlg  larc_ball(0_0_-1).xlg  larc_ball(0_0_-10).xlg  larc_ball(0_0_-2).xlg  larc_ball(0_0_-3).xlg  larc_ball(0_0_-5).xlg  larc_ball(0_0_0).xlg  larc_ball(0_0_1).xlg  larc_ball(1_1).xlg  larc_ball(1_1_1).xlg  larc_ball(2_2).xlg  larc_ball(4_4).xlg  larc_ball(pi_pi).xlg
fasta/: AF086833_ebola.fasta  GenBank_MT072688-1_SARS-COV-2.fasta  NC001416_phagelambda.fasta  NC004718_sars.fasta  gi187567196_papaya1446.fasta  gi880815890_MelissococcusPlutonius.fasta
labs/: LabDNA.cpp  LabLarc.cpp  LabOCS.cpp
pdfplots/: makefile
plots/: makefile  shelltop.tex
tests/: TestSuiteLarc.cpp  TestSuiteMisc.cpp  TestSuiteR2.cpp  TestSuiteR3.cpp  TestSuiteR4.cpp  TestSuiteR6.cpp  TestSuiteTuples.cpp  TestSuiteVectRn.cpp  test.cpp  test.h  testlarc.cpp
